# lyra-voice-assistant

./: .gitignore  README.md  development_summary.md  lyra.service  lyra.sh  lyra_planning.md  lyra_tasks.md
backend/: README.md  main.py  pyproject.toml  test_all.py  test_llm.py  test_memory.py  test_tools.py  test_websocket.py  test_websocket_connection.py
backend/api/: __init__.py  routes.py
backend/brain/: __init__.py  llm_service.py
backend/memory/: __init__.py  storage.py
backend/tools/: __init__.py  executor.py
gui/: implementation_summary.md  index.html  main.js  package-lock.json  package.json  script.js  styles.css
